--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,13 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "axios": "^0.19.0",
     "css-loader": "^3.3.2",
     "dotenv": "^8.2.0",
+    "font-awesome": "^4.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "style-loader": "^1.0.1"
