--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "@types/node": "^12.12.17",
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
+    "file-loader": "^6.2.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
@@ -26,12 +28,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.19.0",
     "css-loader": "^3.3.2",
     "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.2.0",
+    "react-scroll-parallax": "^2.3.5",
     "style-loader": "^1.0.1"
   }
 }
